# ShaderMaker

./: .gitignore  .gitmodules  CMakeLists.txt  DeferredShading.cpp  GLSLCompiler.cpp  GLSLCompiler.h  GLSLParse.cpp  GLSLToken.h  GLSLTokenizer.cpp  GLSLTokenizer.h  InfoOutput.cpp  InfoOutput.h  LoadVarying.cpp  LoadXMLPipeline.cpp  LoadXMLShader.cpp  MaterialCompiler.cpp  ParseMaterial.cpp  ParseMaterialShader.cpp  ParseXMLMaterial.cpp  ParseXMLShader.cpp  PipelineCompiler.cpp  RenderPipelineJSON.cpp  RenderPlatformConfig.h  RenderType.h  SLPF_RawGLSL.cpp  SLPF_Varying.cpp  SLPF_XmlGLSL.cpp  SLP_Files.cpp  SLP_Folder.cpp  SLP_Root.cpp  SaveMaterial.cpp  ShaderCompiler.cpp  ShaderConfig.h  ShaderConfigParse.cpp  ShaderConfigParse.h  ShaderConstVarying.h  ShaderDataType.cpp  ShaderDataType.h  ShaderFile.h  ShaderFunction.h  (+18 more)
GLSLCompiler/: GLSLCompiler.cpp  GLSLCompiler.h
GLSLParse/: GLSLParse.cpp  GLSLToken.h  GLSLTokenizer.cpp  ShaderSourceLocation.h  ShaderStruct.h
InfoOutput/: InfoOutput.cpp  InfoOutput.h
MaterialCompiler/: MaterialCompiler.cpp  ParseMaterial.cpp  ParseMaterialShader.cpp  ParseXMLMaterial.cpp  ParseXMLShader.cpp  SaveMaterial.cpp  ShaderMaker.cpp
PipelineCompiler/: PipelineCompiler.cpp
ShaderCompiler/: ShaderCompiler.cpp
ShaderLibrary/: LoadVarying.cpp  SLPF_RawGLSL.cpp  SLPF_XmlGLSL.cpp  SLP_Files.cpp  SLP_Folder.cpp  SLP_Root.cpp  ShaderLib.cpp  ShaderLib.h  XMLShader.cpp  XMLShader.h
gui/: ConfigData.cpp  ConfigData.h  DLG_About.cpp  DLG_About.h  DLG_Config.cpp  DLG_Config.h  DLG_CreateMaterial.cpp  DLG_CreateMaterial.h  DLG_GUIStyle.cpp  DLG_GUIStyle.h  DLG_NameEdit.cpp  DLG_NameEdit.h  DLG_New.cpp  DLG_New.h  DLG_PathConfig.cpp  DLG_PathConfig.h  GLSLSyntaxHighlighter.cpp  GLSLTextEdit.cpp  GLSLTextEdit.h  MainWindow.cpp  MainWindow.h  MainWindowMaterialLibrary.cpp  MainWindowMenu.cpp  MainWindowShaderLib.cpp  MaterialBuilder.cpp  MaterialEditor.cpp  MaterialEditor.qrc  MaterialWriter.cpp  MaterialWriter.qrc  QStringInfoOutput.cpp  QStringInfoOutput.h  ShaderLibTree.cpp  ShaderLibTree.h  TP_MaterialLibrary.cpp  TP_MaterialLibrary.h  TP_MaterialLibraryCompile.cpp  TP_MaterialLibraryEditor.cpp  TP_MaterialLibraryFileTree.cpp  TP_Module.cpp  TP_Module.h  (+25 more)
gui/res/: logo.psd
vulkan/: VKShaderCommon.cpp
xml_shader/: Atmosphere.frag.glsl  Atmosphere.frag.xml  Atmosphere.material.xml  Atmosphere.vert.glsl  Atmosphere.vert.xml  Atomsphere.material.xml  Atomsphere.vert.xml  FragColor.frag.glsl  FragColor.frag.xml  LumTextureColor.frag  LumTextureColor.frag.glsl  Position2D.vert.glsl  Position2D.vert.xml  PureColor.frag.glsl  Texture.frag.glsl  Texture2D.material.xml  Texture2D.vert.glsl  Texture2D.vert.xml  Texture2DHQ.frag.glsl  Texture2DPC.material.xml  Texture2DPC.vert.glsl  Texture2DPC.vert.xml  TextureRect2D.geom.glsl  TextureRect2D.geom.xml  TextureRect2D.material.xml  TextureRect2D.vert.glsl  TextureRect2D.vert.xml  VertexColor.frag.glsl  VertexColor.frag.xml  VertexColor2D.vert.glsl  VertexColor2D.vert.xml  VertexColor3D.vert.glsl  VertexColor3D.vert.xml  mc.bat  mc_all.bat
